update BankingAPI README.md link

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
 
         <div class="list-group">
          <h3 class="list-group-item active">README</h3>
-          <a href="https://github.com/dosbor3/BankingAPI/tree/main#readme" class="list-group-item list-group-item-action">Tipton Bank of Sheldon</a>
+          <a href="https://github.com/dosbor3/BankingAPI/blob/main/README.md" class="list-group-item list-group-item-action">Tipton Bank of Sheldon</a>
           <a href="https://github.com/dosbor3/Java-Full-Stack/blob/main/a5-bulls-and-cows-rest-api-service-dosbor3/README.md" class="list-group-item list-group-item-action">Bulls and Cows</a>
           <a href="https://github.com/dosbor3/Java-Full-Stack/blob/main/a3-vending-machine-dosbor3/README.md" class="list-group-item list-group-item-action">Vending Machine</a>
           <a href="https://github.com/dosbor3/violet-lattes#readme" class="list-group-item list-group-item-action">Violet Lattes</a>
